# RestBase

./: .gitignore  LICENSE  README.md  pyproject.toml
restbase/: __main__.py  api.py  cli.py  config.py  config_generator.py  db.py  schema.py
